--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "prettier": "2.2.1"
   },
   "dependencies": {
+    "aos": "^2.3.4",
     "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
+    "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "jquery": "^3.6.0",
