--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 COOKIE_SECRET=cookiesecret
 MONGO_ID=alvin
 MONGO_PASSWORD=1234
+GOOGLE_CLIENT_ID=254140682684-4rqlvihsogfkcmlujo4davf4j6s0085c.apps.googleusercontent.com
+GOOGLE_SECRET=gnwtBDQnSKDSWZ49a6lzqebK
