--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "aos": "^2.3.4",
+    "bcrypt": "^5.0.1",
     "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.6",
@@ -32,6 +33,9 @@
     "multer": "^1.4.2",
     "mysql2": "^2.2.5",
     "nunjucks": "^3.2.3",
+    "passport": "^0.4.1",
+    "passport-google-oauth2": "^0.2.0",
+    "passport-local": "^1.0.0",
     "sequelize": "^6.5.0",
     "sequelize-cli": "^6.2.0"
   }
