faq page (live chat / faqs)

--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
-COOKIE_SECRET=cookiesecret
+COOKIE_SECRET=boxinchat
 MONGO_ID=alvin
 MONGO_PASSWORD=1234
 GOOGLE_CLIENT_ID=254140682684-4rqlvihsogfkcmlujo4davf4j6s0085c.apps.googleusercontent.com
 GOOGLE_SECRET=gnwtBDQnSKDSWZ49a6lzqebK
+CHAT_PORT=8005
