--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "passport-google-oauth2": "^0.2.0",
     "passport-local": "^1.0.0",
     "sequelize": "^6.5.0",
-    "sequelize-cli": "^6.2.0"
+    "sequelize-cli": "^6.2.0",
+    "socket.io": "^4.0.0",
+    "ws": "^7.4.4"
   }
 }
