live chat branch init

--- a/.env
+++ b/.env
@@ -1,6 +1,8 @@
 COOKIE_SECRET=boxinchat
 MONGO_ID=alvin
-MONGO_PASSWORD=1234
+MONGO_PASSWORD=tlrdlf125
 GOOGLE_CLIENT_ID=254140682684-4rqlvihsogfkcmlujo4davf4j6s0085c.apps.googleusercontent.com
 GOOGLE_SECRET=gnwtBDQnSKDSWZ49a6lzqebK
-CHAT_PORT=8005
+PLACES_API_KEY=AIzaSyALJAFCR_UzOtIl20KcFbTpDNRgjjX9V6s
+CHAT_PORT=8002
+MAP_PORT=8003
