--- a/package.json
+++ b/package.json
@@ -21,14 +21,18 @@
     "prettier": "2.2.1"
   },
   "dependencies": {
+    "@google/maps": "^1.1.3",
     "aos": "^2.3.4",
+    "axios": "^0.21.1",
     "bcrypt": "^5.0.1",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "jquery": "^3.6.0",
+    "mongoose": "^5.12.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "mysql2": "^2.2.5",
@@ -36,7 +40,7 @@
     "passport": "^0.4.1",
     "passport-google-oauth2": "^0.2.0",
     "passport-local": "^1.0.0",
-    "sequelize": "^6.5.0",
+    "sequelize": "^6.5.1",
     "sequelize-cli": "^6.2.0",
     "socket.io": "^4.0.0",
     "ws": "^7.4.4"
